test/sema/typeck/pattern/let-tuple-wrong-count-2.out
error: pattern expects 2 params but got 1.
--> let-tuple-wrong-count-2.dora:1:14
 | fn f() { let (a, b) = (true,); }
                ~~~~~~
 | 
1 error found.
